--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -85,8 +85,6 @@ homing_speed: 40
 [tmc2209 stepper_x]
 uart_pin: X_UART_PIN
 run_current: 0.800
-#diag_pin: PF2
-#driver_SGTHRS: 120
 
 ##############################################################################
 
@@ -115,10 +113,11 @@ step_pin: PB8
 dir_pin: PB7
 enable_pin: !PB9
 microsteps: 16
-rotation_distance: 4
+rotation_distance: 2
 endstop_pin: probe:z_virtual_endstop
 position_max: 340
-homing_speed: 12
+position_min: -2
+homing_speed: 5
 second_homing_speed: 1
 
 [tmc2209 stepper_z]
@@ -132,12 +131,7 @@ step_pin: E1_STEP_PIN
 dir_pin: E1_DIR_PIN
 enable_pin: !E1_ENABLE_PIN
 microsteps: 16
-rotation_distance: 4
-#endstop_pin: probe:z_virtual_endstop
-#position_endstop: 0
-#position_max: 340
-#homing_speed: 12
-#second_homing_speed: 1
+rotation_distance: 2
 
 [tmc2209 stepper_z1]
 uart_pin: E1_UART_PIN
@@ -150,12 +144,7 @@ step_pin: E2_STEP_PIN
 dir_pin: E2_DIR_PIN
 enable_pin: !E2_ENABLE_PIN
 microsteps: 16
-rotation_distance: 4
-#endstop_pin: probe:z_virtual_endstop
-#position_endstop: 0
-#position_max: 340
-#homing_speed: 12
-#second_homing_speed: 1
+rotation_distance: 2
 
 [tmc2209 stepper_z2]
 uart_pin: E2_UART_PIN
@@ -192,8 +181,8 @@ z_hop_speed: 10.0
 [bed_mesh]
 speed: 120
 horizontal_move_z: 7
-mesh_min: 35,5
-mesh_max: 250, 250
+mesh_min: 0,0
+mesh_max: 270, 315
 probe_count: 6,6
 
 ##############################################################################
@@ -202,48 +191,40 @@ probe_count: 6,6
 
 [extruder]
 step_pin: PG12
-dir_pin: PG11
+dir_pin: !PG11
 enable_pin: !PG13
 microsteps: 16
-rotation_distance: 33.500
+rotation_distance: 7.710
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB1 # Heat0
 sensor_pin:  PC1 # T0 Header
-sensor_type: EPCOS 100K B57560G104F
+sensor_type: ATC Semitec 104GT-2
 control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
+pid_kp: 29.321
+pid_ki: 2.221
+pid_kd: 96.759
 min_temp: 0
 max_temp: 290
 
 [tmc2209 extruder]
 uart_pin: PG10
 run_current: 0.800
-#diag_pin:
-#driver_SGTHRS: 100 
 
 ##############################################################################
 # Heated bed settings
 ##############################################################################
 
 [heater_bed]
-heater_pin: PA2
+heater_pin: PA1
 sensor_pin: PC0 # BED
-sensor_type: ATC Semitec 104GT-2
+sensor_type: NTC 100K beta 3950
 control: watermark
 min_temp: 0
 max_temp: 130
 
 #[fan]
 #pin: PE5 # FAN0
-
-[heater_fan fan1]
-pin: PE6 # FAN1
-
-#[heater_fan fan2]
-#pin: PC8 # FAN2
 
 ##############################################################################
 # sensor settings
@@ -252,10 +233,10 @@ pin: PE6 # FAN1
 [bltouch]
 sensor_pin: ^PH11
 control_pin: PB11
-x_offset: 5
-y_offset: -2
+x_offset: 33
+y_offset: -5
 sample_retract_dist: 5
-z_offset: 1.750
+z_offset = 1.200
 speed: 2
 lift_speed:2
 samples:2
@@ -277,6 +258,13 @@ max_temp: 100
 ##############################################################################
 
 # TFT35 currently not working :/
+
+##############################################################################
+# fan settings
+##############################################################################
+
+[heater_fan nozzle_fan]
+pin: PE5 # FAN1
 
 ##############################################################################  
 # GCode macros for mainsailOS
