--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -179,11 +179,12 @@ z_hop_speed: 10.0
 ##############################################################################
 
 [bed_mesh]
+algorithm: bicubic
 speed: 120
 horizontal_move_z: 7
-mesh_min: 0,0
-mesh_max: 270, 315
-probe_count: 6,6
+mesh_min: 40,10
+mesh_max: 270, 270
+probe_count: 8,8
 
 ##############################################################################
 # Extruder settings
