--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -332,3 +332,53 @@ aliases:
   E2_STEP_PIN=PD1,
   E2_ENABLE_PIN=PD2,
   E2_UART_PIN=PC12
+
+
+
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.219063, -0.146563, -0.050000, -0.031250, -0.051563, -0.093125, -0.128438, -0.208438
+#*# 	  -0.225938, -0.153125, -0.069063, -0.027188, -0.023750, -0.061250, -0.128750, -0.269688
+#*# 	  -0.216563, -0.138438, -0.055625, -0.003750, 0.012187, -0.019375, -0.117188, -0.292813
+#*# 	  -0.171563, -0.104375, -0.035625, 0.001562, 0.013125, -0.014688, -0.111250, -0.275313
+#*# 	  -0.131875, -0.084063, -0.027813, -0.007813, -0.001250, -0.029375, -0.138750, -0.321563
+#*# 	  -0.144063, -0.091875, -0.035313, -0.025938, -0.037500, -0.096875, -0.235625, -0.430938
+#*# 	  -0.146250, -0.099375, -0.053750, -0.059688, -0.095313, -0.188438, -0.347188, -0.551875
+#*# 	  -0.144063, -0.161250, -0.178438, -0.236563, -0.293438, -0.369063, -0.495625, -0.288750
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 8
+#*# mesh_y_pps = 2
+#*# min_y = 10.0
+#*# x_count = 8
+#*# max_y = 299.94
+#*# mesh_x_pps = 2
+#*# max_x = 269.95
+#*#
+#*# [bed_mesh Initial_2021-03-22]
+#*# version = 1
+#*# points =
+#*# 	  -0.219063, -0.146563, -0.050000, -0.031250, -0.051563, -0.093125, -0.128438, -0.208438
+#*# 	  -0.225938, -0.153125, -0.069063, -0.027188, -0.023750, -0.061250, -0.128750, -0.269688
+#*# 	  -0.216563, -0.138438, -0.055625, -0.003750, 0.012187, -0.019375, -0.117188, -0.292813
+#*# 	  -0.171563, -0.104375, -0.035625, 0.001562, 0.013125, -0.014688, -0.111250, -0.275313
+#*# 	  -0.131875, -0.084063, -0.027813, -0.007813, -0.001250, -0.029375, -0.138750, -0.321563
+#*# 	  -0.144063, -0.091875, -0.035313, -0.025938, -0.037500, -0.096875, -0.235625, -0.430938
+#*# 	  -0.146250, -0.099375, -0.053750, -0.059688, -0.095313, -0.188438, -0.347188, -0.551875
+#*# 	  -0.144063, -0.161250, -0.178438, -0.236563, -0.293438, -0.369063, -0.495625, -0.288750
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 8
+#*# mesh_y_pps = 2
+#*# min_y = 10.0
+#*# x_count = 8
+#*# max_y = 299.94
+#*# mesh_x_pps = 2
+#*# max_x = 269.95
