--- a/SparkCube/klipper/printer.cfg
+++ b/SparkCube/klipper/printer.cfg
@@ -4,6 +4,35 @@
 
 # See docs/Config_Reference.md for a description of parameters.
 
+##############################################################################
+# Main microcontroller settings
+##############################################################################
+
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
+
+##############################################################################
+# global printer settings
+##############################################################################
+
+[printer]
+kinematics: corexy
+max_velocity: 400
+max_accel: 500
+max_z_velocity: 10
+max_z_accel: 100
+
+[virtual_sdcard]
+path: ~/gcode_files
+
+[display_status]
+
+[pause_resume]
+
+##############################################################################
+# stepper settings
+##############################################################################
+
 [stepper_x]
 step_pin: P2.2
 dir_pin: P2.6
@@ -12,8 +41,15 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: !P1.29
 position_endstop: 0
-position_max: 235
+position_max: 180
+position_max: 180
 homing_speed: 50
+
+[tmc2209 stepper_x]
+uart_pin: X_UART_PIN
+run_current: 0.800
+
+##############################################################################
 
 [stepper_y]
 step_pin: P0.19
@@ -26,6 +62,12 @@ position_endstop: 0
 position_max: 235
 homing_speed: 50
 
+[tmc2209 stepper_y]
+uart_pin: Y_UART_PIN
+run_current: 0.800
+
+##############################################################################
+
 [stepper_z]
 step_pin: P0.22
 dir_pin: !P2.11
@@ -35,6 +77,14 @@ rotation_distance: 8
 endstop_pin: !P1.27
 position_endstop: 0.0
 position_max: 300
+
+[tmc2209 stepper_z]
+uart_pin: Z_UART_PIN
+run_current: 0.800
+
+##############################################################################
+# Extruder settings
+##############################################################################
 
 [extruder]
 step_pin: P2.13
@@ -54,14 +104,6 @@ pid_Kd: 114
 min_temp: 0
 max_temp: 260
 
-#[extruder1]
-#step_pin: P1.15
-#dir_pin: P1.14
-#enable_pin: !P1.16
-#heater_pin: P2.4
-#sensor_pin: P0.23
-#...
-
 [heater_bed]
 heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
@@ -75,107 +117,6 @@ max_temp: 130
 
 [fan]
 pin: P2.3
-
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
-
-[printer]
-kinematics: cartesian
-max_velocity: 400
-max_accel: 500
-max_z_velocity: 10
-max_z_accel: 100
-
-
-########################################
-# TMC2208 configuration
-########################################
-
-#[tmc2208 stepper_x]
-#uart_pin: P1.10
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 250
-#
-#[tmc2208 stepper_y]
-#uart_pin: P1.9
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 250
-#
-#[tmc2208 stepper_z]
-#uart_pin: P1.8
-#run_current: 0.650
-#hold_current: 0.450
-#stealthchop_threshold: 30
-#
-#[tmc2208 extruder]
-#uart_pin: P1.4
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 5
-#
-#[tmc2208 extruder1]
-#uart_pin: P1.1
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 5
-
-
-########################################
-# TMC2130 configuration
-########################################
-
-#[tmc2130 stepper_x]
-#cs_pin: P1.10
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P1.17
-#spi_software_sclk_pin: P0.4
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 250
-#diag1_pin: P1.29
-
-#[tmc2130 stepper_y]
-#cs_pin: P1.9
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P1.17
-#spi_software_sclk_pin: P0.4
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 250
-#diag1_pin: P1.28
-
-#[tmc2130 stepper_z]
-#cs_pin: P1.8
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P1.17
-#spi_software_sclk_pin: P0.4
-#run_current: 0.650
-#hold_current: 0.450
-#stealthchop_threshold: 30
-#diag1_pin: P1.27
-
-#[tmc2130 extruder]
-#cs_pin: P1.4
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P1.17
-#spi_software_sclk_pin: P0.4
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 5
-#diag1_pin: P1.26
-
-#[tmc2130 extruder1]
-#cs_pin: P1.1
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P1.17
-#spi_software_sclk_pin: P0.4
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 5
-#diag1_pin: P1.25
-
 
 ########################################
 # EXP1 / EXP2 (display) pins
