--- a/PonderCube EVO/klipper/printer.cfg
+++ b/PonderCube EVO/klipper/printer.cfg
@@ -1,52 +1,24 @@
-# This file contains common pin mappings for the BigTreeTech GTR.
-# To use this config, the firmware should be compiled for the
-# STM32F407 with a "32KiB bootloader".
 
-# The "make flash" command does not work on the GTR. Instead,
-# after running "make", copy the generated "klipper/out/klipper.bin" file to a
-# file named "firmware.bin" on an SD card and then restart the GTR
-# with that SD card.
-
-# See docs/Config_Reference.md for a description of parameters.
 
 ##############################################################################
-# BTT GTR1.0 and M5 expansion board port mappings
+# Printer configuration for BTT Octopus Pro
 ##############################################################################
 
-## Driver pins
-# BTT GTR 1.0 board drivers
-# | Drive |  DIR pin |  STEP pin |  ENABLE pin  |ENDSTOP pin? |  SPI EN pin? |
-# |-------|----------|-----------|--------------|-------------|--------------|
-# | X     |  PF0     |  PC15     |  PF1         |             |              |
-# | Y     |  PE2     |  PE3      |  PE4         |             |              |
-# | Z     |  PC7     |  PB8      |  PB9         |             |              |
-# | E0    |  PG11    |  PG12     |  PG13        |             |              |
-# | E1    |  PD5     |  PD6      |  PD7         |             |              |
-# | E2    |  PD0     |  PD1      |  PD2         |             |              |
-
-# M5 expansion board drivers
-# | Drive |  DIR pin |  STEP pin |  ENDSTOP pin |  SPI EN pin |
-# |-------|----------|-----------|--------------|-------------|
-# | M1    |          |           |              |             |
-# | M2    |          |           |              |             |
-# | M3    |          |           |              |             |
-# | M4    |          |           |              |             |
-# | M5    |          |           |              |             |
-
-## Other pins
-
-# BLTouch
-
 ##############################################################################
-# Main microcontroller settings
+# main microcontroller settings for MCU and RPi
 ##############################################################################
 
 [mcu]
 restart_method: command
-serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_3300590014504D4254373320-if00
+serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_1F0016000B50534E4E313120-if00
+#canbus_uuid: f51fd56c2a99
 
 #[mcu rpi]
 #serial: /tmp/klipper_host_mcu
+
+#[mcu sht]
+#canbus_uuid: 0effa39f97f0
+#serial: /dev/serial/by-id/usb-Klipper_stm32f072xb_28002600030000484D4A534E-if00
 
 ##############################################################################
 # global printer settings
@@ -55,97 +27,109 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_3300590014504D4254373320-if00
 [printer]
 kinematics: corexy
 max_velocity: 500
-max_accel: 3000
-max_z_velocity: 12
-max_z_accel: 5
+max_accel: 5000
+max_z_velocity: 50
+max_z_accel: 100
 
 [virtual_sdcard]
 path: ~/gcode_files
+
+[include mainsail.cfg]
 
 [display_status]
 
 [pause_resume]
 
+#Enable exclude objects feature
+[exclude_object]
+
 ##############################################################################
-# stepper settings
+# stepper settings X and Y
 ##############################################################################
 
+# X / Driver 0
 [stepper_x]
-step_pin: X_STEP_PIN
-dir_pin: X_DIR_PIN
-enable_pin: !X_ENABLE_PIN
+enable_pin: !PF14
+step_pin: PF13
+dir_pin: PF12
 microsteps: 16
 full_steps_per_rotation: 400
 rotation_distance: 40
-endstop_pin: PF2
+endstop_pin: ^PG6
 position_endstop: 0
-position_max: 310
-homing_speed: 40
+position_max:270
+homing_speed: 50
 
 [tmc2209 stepper_x]
-uart_pin: X_UART_PIN
+uart_pin: PC4
 run_current: 0.800
 
 ##############################################################################
 
+# Y / Driver 1
 [stepper_y]
-step_pin: Y_STEP_PIN
-dir_pin: Y_DIR_PIN
-enable_pin: !Y_ENABLE_PIN
+enable_pin: !PF15
+step_pin: PG0
+dir_pin: PG1
 microsteps: 16
 full_steps_per_rotation: 400
 rotation_distance: 40
-endstop_pin: tmc2209_stepper_y:virtual_endstop
+endstop_pin: PG9
 position_endstop: 0
-position_max: 310
-homing_speed: 40
+position_max: 280
+homing_speed: 50
 
 [tmc2209 stepper_y]
-uart_pin: Y_UART_PIN
+uart_pin: PD11
 run_current: 0.800
 
 ##############################################################################
+# stepper settings triple Z
+##############################################################################
 
+# Z / Driver 3
 [stepper_z]
-step_pin: PB8
-dir_pin: PB7
-enable_pin: !PB9
+enable_pin: !PA0
+step_pin: PG4
+dir_pin: PC1
 microsteps: 16
 rotation_distance: 2
 endstop_pin: probe:z_virtual_endstop
 position_max: 340
-position_min: -2
-homing_speed: 5
+position_min: -5
+homing_speed: 4
 second_homing_speed: 1
 
 [tmc2209 stepper_z]
-uart_pin: Z_UART_PIN
+uart_pin: PC7
 run_current: 0.800
 
-# E1 is used as Z1 ###########################################################
- 
+############### Z1 ###########################################################
+
+# Z1 / Driver 4
 [stepper_z1]
-step_pin: E1_STEP_PIN
-dir_pin: E1_DIR_PIN
-enable_pin: !E1_ENABLE_PIN
+enable_pin: !PG2
+step_pin: PF9
+dir_pin: PF10
 microsteps: 16
 rotation_distance: 2
 
 [tmc2209 stepper_z1]
-uart_pin: E1_UART_PIN
+uart_pin: PF2
 run_current: 0.800
 
-# E2 is used as Z2 ###########################################################
+############### Z2 ###########################################################
 
+# Z2 / Driver 5
 [stepper_z2]
-step_pin: E2_STEP_PIN
-dir_pin: E2_DIR_PIN
-enable_pin: !E2_ENABLE_PIN
+enable_pin: !PF1
+step_pin: PC13
+dir_pin: PF0
 microsteps: 16
 rotation_distance: 2
 
 [tmc2209 stepper_z2]
-uart_pin: E2_UART_PIN
+uart_pin: PE4
 run_current: 0.800
 
 ##############################################################################
@@ -154,23 +138,61 @@ run_current: 0.800
 
 [z_tilt]
 z_positions:
-  20,5
+  15,15
   160,315
-  315, 5
+  315, 15
 points:
-  0,0
-  115,300
-  270,0
-speed: 80
-horizontal_move_z: 5
+  0, 0
+  135,230
+  270, 0
+speed: 200
+horizontal_move_z: 20
 retries: 5
 retry_tolerance: 0.03
 
 [safe_z_home]
-home_xy_position: 150, 150
-speed: 80.0
-z_hop: 10.0
+home_xy_position: 135, 140
+speed: 50.0
+z_hop: 5.0
 z_hop_speed: 10.0
+
+##############################################################################
+# Extruder settings
+##############################################################################
+
+[extruder]
+enable_pin: !PG5
+step_pin: PF11
+dir_pin: !PG3
+microsteps: 16
+min_extrude_temp: 15
+rotation_distance: 23.36
+gear_ratio: 50:10
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+### Octopus Pro Heater / Sensor
+heater_pin: PA2 # HE0
+sensor_pin: PF4 # T0
+### SHT Heater / sensor
+# heater_pin: sht:PA8
+# sensor_pin: sht:PA4
+
+### Phaetus or e3D-v6 Sensor
+sensor_type: ATC Semitec 104GT-2 # Sensor for e3D-v6
+# sensor_type: ATC Semitec 104NT-4-R025H42G # Sensor for Phaetus Rapido
+
+# PID values for e3d v6
+control: pid
+pid_kp: 24.948
+pid_ki: 1.289
+pid_kd: 120.686
+
+min_temp: 0
+max_temp: 290
+
+[tmc2209 extruder]
+uart_pin: PC6
+run_current: 0.400
 
 ##############################################################################
 # bed mesh settings
@@ -180,69 +202,49 @@ z_hop_speed: 10.0
 algorithm: bicubic
 speed: 120
 horizontal_move_z: 7
-mesh_min: 40,10
-mesh_max: 270, 270
-probe_count: 8,8
+mesh_min: 0,50
+mesh_max: 270, 250
+probe_count: 10,10
 
 ##############################################################################
-# Extruder settings
-##############################################################################
-
-[extruder]
-step_pin: PG12
-dir_pin: !PG11
-enable_pin: !PG13
-microsteps: 16
-rotation_distance: 7.710
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PB1 # Heat0
-sensor_pin:  PC1 # T0 Header
-sensor_type: ATC Semitec 104GT-2
-control: pid
-pid_kp: 29.321
-pid_ki: 2.221
-pid_kd: 96.759
-min_temp: 0
-max_temp: 290
-
-[tmc2209 extruder]
-uart_pin: PG10
-run_current: 0.800
-
-##############################################################################
-# Heated bed settings
+# Heated bed
 ##############################################################################
 
 [heater_bed]
 heater_pin: PA1
-sensor_pin: PC0 # BED
-sensor_type: NTC 100K beta 3950
+sensor_pin: PF3 # sensor port TB
+sensor_type: Generic 3950
 control: watermark
-min_temp: 0
+min_temp: 10
 max_temp: 130
-
-#[fan]
-#pin: PE5 # FAN0
-
-
 
 ##############################################################################
 # sensor settings
 ##############################################################################
 
-[bltouch]
-sensor_pin: ^PH11
-control_pin: PB11
-x_offset: 33
-y_offset: -5
-sample_retract_dist: 5
-#z_offset = 0.750
-speed: 2
-lift_speed:2
-samples:2
-samples_tolerance: 0.05
-samples_tolerance_retries: 5
+#[bltouch]
+# SHT BLTouch
+#sensor_pin: ^sht:PC15
+#control_pin: sht:PB1
+# Octopus BLTouch
+#sensor_pin: PB7
+#control_pin: PB6
+#x_offset: 31
+#y_offset: -11
+#z_offset: 4.290
+#sample_retract_dist: 5
+#speed: 2
+#lift_speed:2
+#samples:2
+#samples_tolerance: 0.05
+#samples_tolerance_retries: 5
+
+[beacon]
+serial: /dev/serial/by-id/usb-Beacon_Beacon_RevH_EA0FBC424E5737374D202020FF073629-if00
+x_offset: 0 # update with offset from nozzle on your machine
+y_offset: 50 # update with offset from nozzle on your machine
+mesh_main_direction: x
+mesh_runs: 2
 
 [temperature_sensor mcu_temp]
 sensor_type: temperature_mcu
@@ -255,130 +257,163 @@ min_temp: 10
 max_temp: 100
 
 ##############################################################################
-# display settings
-##############################################################################
-
-# TFT35 currently not working :/
-
-##############################################################################
 # fan settings
 ##############################################################################
 
+# CPAP blower attached to RASPI GPIO
+[fan]
+# Fan directly attached to GPIO26 / Raspi
+#pin: rpi:gpio26
+pin: !PD12
+max_power: 1
+off_below: 0.3
+cycle_time: 0.002
+hardware_pwm: false
+shutdown_speed: 0
+
+# Hotend cooling
 [heater_fan nozzle_fan]
-pin: PE5 # FAN1
+pin: PA8
+heater: extruder
+heater_temp: 40.0
+fan_speed: 1.0
 
-##############################################################################  
-# GCode macros for mainsailOS
+# Controller Fans for Octopus Board
+[multi_pin octopus_fan_pins]
+pins: PD13,PD14,PD15
+
+[controller_fan octopus_fan_pins]
+pin: multi_pin:octopus_fan_pins
+fan_speed: 0.5
+idle_timeout: 300
+kick_start_time: 1
+stepper: stepper_x, stepper_y, stepper_z, stepper_z1, stepper_z2, extruder
+
+# Case fans
+
+##############################################################################
+# gcode macros
 ##############################################################################
 
-[gcode_macro PAUSE]
-rename_existing: BASE_PAUSE
-default_parameter_X: 230    #edit to your park position
-default_parameter_Y: 230    #edit to your park position
-default_parameter_Z: 10     #edit to your park position
-default_parameter_E: 1      #edit to your retract length
+[gcode_macro START_PRINT]
 gcode:
-    SAVE_GCODE_STATE NAME=PAUSE_state
-    BASE_PAUSE
-    G91
-    G1 E-{E} F2100
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F6000
-	
-[gcode_macro RESUME]
-rename_existing: BASE_RESUME
-default_parameter_E: 1      #edit to your retract length
-gcode:
-    G91
-    G1 E{E} F2100
-    G90
-    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    BASE_RESUME
-	
-[gcode_macro CANCEL_PRINT]
-rename_existing: BASE_CANCEL_PRINT
-gcode:
-    TURN_OFF_HEATERS
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    BASE_CANCEL_PRINT
+  {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    
+  M140 S{BED_TEMP}                # Start bed heating
+  G90                             # Use absolute coordinates  
+  SET_GCODE_OFFSET Z=0.0          # Reset the G-Code Z offset (adjust Z offset if needed)
+  
+  G28                             # Home the printer
+  #Z_TILT_ADJUST
+  
+  # Move the nozzle near the bed
+  G1 Z5 F3000
+  # Move the nozzle very close to the bed
+  G1 Z0.15 F300
+  # Wait for bed to reach temperature
+  M190 S{BED_TEMP}
+  # Set and wait for nozzle to reach temperature
+  M109 S{EXTRUDER_TEMP}
 
-##############################################################################	
-# Alias definitions
-##############################################################################
 
-[board_pins]
-aliases:
-  X_DIR_PIN=PF0,
-  X_STEP_PIN=PC15,
-  X_ENABLE_PIN=PF1,
-  X_UART_PIN=PC14,
-  X_MIN_PIN=PF2,  
-  Y_DIR_PIN=PE2,
-  Y_STEP_PIN=PE3,
-  Y_ENABLE_PIN=PE4,
-  Y_UART_PIN=PE1,
-  Y_MIN_PIN=PC13,  
-  Z_DIR_PIN=PC7,
-  Z_STEP_PIN=PB8,
-  Z_ENABLE_PIN=PB9,
-  Z_UART_PIN=PB5,
-  E1_DIR_PIN=PD5,
-  E1_STEP_PIN=PD6,
-  E1_ENABLE_PIN=PD7,
-  E1_UART_PIN=PD4,  
-  E2_DIR_PIN=PD0,
-  E2_STEP_PIN=PD1,
-  E2_ENABLE_PIN=PD2,
-  E2_UART_PIN=PC12
+[gcode_macro END_PRINT]
+gcode:
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Move nozzle away from print while retracting
+    G91
+    G1 X-4 Y-4 Z40 E-3 F300
+    # Home X
+    G28 X    
+    # 
+    G90
+    # Disable steppers
+    M84
+
+################## CONTROL BOARD PIN DEFINITION ####################
+#  ______________________________________________________________
+# | DRIVE | STEP pin | DIR pin  | EN pin   | CS PIN   | END_STOP |
+# |-------|----------|----------|----------|----------|----------|
+# | 0     | PF13     | PF12     | PF14     | PC4      | PG6      |
+# | 1     | PG0      | PG1      | PF15     | PD11     | PG9      |
+# | 2.1&2 | PF11     | PG3      | PG5      | PC6      | PG10     |
+# | 3     | PG4      | PC1      | PA0      | PC7      | PG11     |
+# | 4     | PF9      | PF10     | PG2      | PF2      | PG12     |
+# | 5     | PC13     | PF0      | PF1      | PE4      | PD13     |
+# | 6     | PE2      | PE3      | PD4      | PE1      | PD14     |
+# | 7     | PE6      | PA14     | PE0      | PD3      | PD15     |
+# |_______|__________|__________|__________|__________|__________|
+#  ___________________ 
+# | FAN   |    PIN    |
+# |-------|-----------|
+# | FAN0  | PA8       |
+# | FAN1  | PE5       |
+# | FAN2  | PD12      |
+# | FAN3  | PD13      |
+# | FAN4  | PD14      |
+# | FAN5  | PD15      |
+# | FAN6  | ALWAYS_ON |
+# | FAN7  | ALWAYS_ON |
+# | ______|___________|
+#  ________________________________
+# | HEATER |  HEAT pin |  TEMP pin |
+# |--------|-----------|-----------|
+# | BED    | PA1       | (TB) PF3  |
+# | HE0    | PA2       | (TO) PF4  |
+# | HE1    | PA3       | (T1) PF5  |
+# | HE2    | PB10      | (T2) PF6  |
+# | HE3    | PB11      | (T3) PF7  |
+# |________|___________|___________|
+#  _________________
+# | SPI    | PIN    |
+# |--------|--------|
+# | MOSI   | PA7    |
+# | MISO   | PA6    |
+# | SCK    | PA5    |
+# |________|________|
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [bltouch]
-#*# z_offset = 0.450
+#*# [beacon model default]
+#*# model_coef = 1.7584278276158511,
+#*# 	2.059659386959121,
+#*# 	0.624615833902282,
+#*# 	0.1805168495387664,
+#*# 	0.16900378624051468,
+#*# 	0.3135394469702327,
+#*# 	0.037474196091883905,
+#*# 	-0.31090547299621213,
+#*# 	0.012111261462012388,
+#*# 	0.16023089984226827
+#*# model_domain = 1.9054141955419293e-07,1.9436145783024536e-07
+#*# model_range = 0.200000,5.000000
+#*# model_temp = 22.503423
+#*# model_offset = 0.00000
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.219063, -0.146563, -0.050000, -0.031250, -0.051563, -0.093125, -0.128438, -0.208438
-#*# 	-0.225938, -0.153125, -0.069063, -0.027188, -0.023750, -0.061250, -0.128750, -0.269688
-#*# 	-0.216563, -0.138438, -0.055625, -0.003750, 0.012187, -0.019375, -0.117188, -0.292813
-#*# 	-0.171563, -0.104375, -0.035625, 0.001562, 0.013125, -0.014688, -0.111250, -0.275313
-#*# 	-0.131875, -0.084063, -0.027813, -0.007813, -0.001250, -0.029375, -0.138750, -0.321563
-#*# 	-0.144063, -0.091875, -0.035313, -0.025938, -0.037500, -0.096875, -0.235625, -0.430938
-#*# 	-0.146250, -0.099375, -0.053750, -0.059688, -0.095313, -0.188438, -0.347188, -0.551875
-#*# 	-0.144063, -0.161250, -0.178438, -0.236563, -0.293438, -0.369063, -0.495625, -0.288750
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 8
-#*# mesh_y_pps = 2
-#*# min_y = 10.0
-#*# x_count = 8
-#*# max_y = 299.94
+#*# 	  -0.002842, -0.019282, -0.040882, -0.050134, -0.040173, -0.017659, -0.002455, -0.012692, -0.015574, -0.003961
+#*# 	  -0.033207, -0.044592, -0.062432, -0.075275, -0.066565, -0.042682, -0.025770, -0.039354, -0.044384, -0.031993
+#*# 	  -0.060011, -0.070218, -0.086641, -0.096598, -0.091104, -0.066627, -0.049060, -0.059507, -0.069359, -0.062200
+#*# 	  -0.090795, -0.094984, -0.107192, -0.116410, -0.106860, -0.082359, -0.062287, -0.073299, -0.082161, -0.072433
+#*# 	  -0.099968, -0.106528, -0.116498, -0.123281, -0.112508, -0.087451, -0.066245, -0.080015, -0.089060, -0.082401
+#*# 	  -0.111169, -0.109980, -0.119728, -0.122925, -0.109802, -0.087636, -0.066367, -0.076015, -0.089559, -0.084458
+#*# 	  -0.110935, -0.111660, -0.116656, -0.119529, -0.106779, -0.080402, -0.061100, -0.071776, -0.083696, -0.079913
+#*# 	  -0.118947, -0.110082, -0.111553, -0.111671, -0.098457, -0.073762, -0.052487, -0.064300, -0.076382, -0.068475
+#*# 	  -0.097367, -0.091318, -0.089929, -0.091784, -0.078443, -0.052228, -0.031347, -0.042714, -0.052898, -0.045767
+#*# 	  -0.084889, -0.076245, -0.071685, -0.071712, -0.058159, -0.031520, -0.007943, -0.017730, -0.026703, -0.020454
+#*# x_count = 10
+#*# y_count = 10
 #*# mesh_x_pps = 2
-#*# max_x = 269.95
-#*#
-#*# [bed_mesh Initial_2021-03-22]
-#*# version = 1
-#*# points =
-#*# 	-0.219063, -0.146563, -0.050000, -0.031250, -0.051563, -0.093125, -0.128438, -0.208438
-#*# 	-0.225938, -0.153125, -0.069063, -0.027188, -0.023750, -0.061250, -0.128750, -0.269688
-#*# 	-0.216563, -0.138438, -0.055625, -0.003750, 0.012187, -0.019375, -0.117188, -0.292813
-#*# 	-0.171563, -0.104375, -0.035625, 0.001562, 0.013125, -0.014688, -0.111250, -0.275313
-#*# 	-0.131875, -0.084063, -0.027813, -0.007813, -0.001250, -0.029375, -0.138750, -0.321563
-#*# 	-0.144063, -0.091875, -0.035313, -0.025938, -0.037500, -0.096875, -0.235625, -0.430938
-#*# 	-0.146250, -0.099375, -0.053750, -0.059688, -0.095313, -0.188438, -0.347188, -0.551875
-#*# 	-0.144063, -0.161250, -0.178438, -0.236563, -0.293438, -0.369063, -0.495625, -0.288750
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 8
 #*# mesh_y_pps = 2
-#*# min_y = 10.0
-#*# x_count = 8
-#*# max_y = 299.94
-#*# mesh_x_pps = 2
-#*# max_x = 269.95
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 0.0
+#*# max_x = 270.0
+#*# min_y = 50.0
+#*# max_y = 250.0
