--- a/PonderCube EVO/klipper/printer.cfg
+++ b/PonderCube EVO/klipper/printer.cfg
@@ -16,10 +16,6 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_1F0016000B50534E4E313120-if00
 #[mcu rpi]
 #serial: /tmp/klipper_host_mcu
 
-#[mcu sht]
-#canbus_uuid: 0effa39f97f0
-#serial: /dev/serial/by-id/usb-Klipper_stm32f072xb_28002600030000484D4A534E-if00
-
 ##############################################################################
 # global printer settings
 ##############################################################################
@@ -173,9 +169,6 @@ filament_diameter: 1.750
 ### Octopus Pro Heater / Sensor
 heater_pin: PA2 # HE0
 sensor_pin: PF4 # T0
-### SHT Heater / sensor
-# heater_pin: sht:PA8
-# sensor_pin: sht:PA4
 
 ### Phaetus or e3D-v6 Sensor
 sensor_type: ATC Semitec 104GT-2 # Sensor for e3D-v6
@@ -222,23 +215,6 @@ max_temp: 130
 # sensor settings
 ##############################################################################
 
-#[bltouch]
-# SHT BLTouch
-#sensor_pin: ^sht:PC15
-#control_pin: sht:PB1
-# Octopus BLTouch
-#sensor_pin: PB7
-#control_pin: PB6
-#x_offset: 31
-#y_offset: -11
-#z_offset: 4.290
-#sample_retract_dist: 5
-#speed: 2
-#lift_speed:2
-#samples:2
-#samples_tolerance: 0.05
-#samples_tolerance_retries: 5
-
 [beacon]
 serial: /dev/serial/by-id/usb-Beacon_Beacon_RevH_EA0FBC424E5737374D202020FF073629-if00
 x_offset: 0 # update with offset from nozzle on your machine
@@ -263,7 +239,8 @@ max_temp: 100
 # CPAP blower attached to RASPI GPIO
 [fan]
 # Fan directly attached to GPIO26 / Raspi
-#pin: rpi:gpio26
+# pin: rpi:gpio26
+# Fan attached to Octopus Pro
 pin: !PD12
 max_power: 1
 off_below: 0.3
