--- a/PonderCube EVO/klipper/printer.cfg
+++ b/PonderCube EVO/klipper/printer.cfg
@@ -1,5 +1,3 @@
-
-
 ##############################################################################
 # Printer configuration for BTT Octopus Pro
 ##############################################################################
@@ -34,6 +32,9 @@ path: ~/gcode_files
 
 #Enable exclude objects feature
 [exclude_object]
+
+# Include with all custom macros
+[include printer_macros.cfg]
 
 ##############################################################################
 # stepper settings X and Y
@@ -137,7 +138,7 @@ points:
   0, 0
   135,230
   270, 0
-speed: 200
+speed: 300
 horizontal_move_z: 20
 retries: 5
 retry_tolerance: 0.03
@@ -149,7 +150,7 @@ z_hop: 5.0
 z_hop_speed: 10.0
 
 ##############################################################################
-# Extruder settings
+# Extruder settings - vz-hextrudORT low plus
 ##############################################################################
 
 [extruder]
@@ -157,9 +158,9 @@ enable_pin: !PG5
 step_pin: PF11
 dir_pin: !PG3
 microsteps: 16
-min_extrude_temp: 15
-rotation_distance: 23.36
-gear_ratio: 50:10
+min_extrude_temp: 15 # debug setting: allow cold extrusion
+rotation_distance: 35.8
+gear_ratio: 60:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 ### Octopus Pro Heater / Sensor
@@ -167,21 +168,21 @@ heater_pin: PA2 # HE0
 sensor_pin: PF4 # T0
 
 ### Phaetus or e3D-v6 Sensor
-sensor_type: ATC Semitec 104GT-2 # Sensor for e3D-v6
-# sensor_type: ATC Semitec 104NT-4-R025H42G # Sensor for Phaetus Rapido
+#sensor_type: ATC Semitec 104GT-2 # Sensor for e3D-v6
+sensor_type: ATC Semitec 104NT-4-R025H42G # Sensor for Phaetus Rapido
 
-# PID values for e3d v6
+# PID values for Phaetus Rapido / HF
 control: pid
-pid_kp: 24.948
-pid_ki: 1.289
-pid_kd: 120.686
+pid_kp: 30.458
+pid_ki: 2.901
+pid_kd: 79.952
 
 min_temp: 0
 max_temp: 290
 
 [tmc2209 extruder]
 uart_pin: PC6
-run_current: 0.400
+run_current: 0.500
 
 ##############################################################################
 # bed mesh settings
@@ -189,7 +190,7 @@ run_current: 0.400
 
 [bed_mesh]
 algorithm: bicubic
-speed: 120
+speed: 300
 horizontal_move_z: 7
 mesh_min: 0,50
 mesh_max: 270, 250
@@ -228,6 +229,11 @@ sensor_type: temperature_host
 min_temp: 10
 max_temp: 100
 
+[resonance_tester]
+accel_chip: beacon
+probe_points: 135, 140, 50
+#accel_axes_map: -x, -y,
+
 ##############################################################################
 # fan settings
 ##############################################################################
@@ -264,47 +270,7 @@ stepper: stepper_x, stepper_y, stepper_z, stepper_z1, stepper_z2, extruder
 
 # Case fans
 
-##############################################################################
-# gcode macros
-##############################################################################
 
-[gcode_macro START_PRINT]
-gcode:
-  {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-    
-  M140 S{BED_TEMP}                # Start bed heating
-  G90                             # Use absolute coordinates  
-  SET_GCODE_OFFSET Z=0.0          # Reset the G-Code Z offset (adjust Z offset if needed)
-  
-  G28                             # Home the printer
-  #Z_TILT_ADJUST
-  
-  # Move the nozzle near the bed
-  G1 Z5 F3000
-  # Move the nozzle very close to the bed
-  G1 Z0.15 F300
-  # Wait for bed to reach temperature
-  M190 S{BED_TEMP}
-  # Set and wait for nozzle to reach temperature
-  M109 S{EXTRUDER_TEMP}
-
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-4 Y-4 Z40 E-3 F300
-    # Home X
-    G28 X    
-    # 
-    G90
-    # Disable steppers
-    M84
 
 ################## CONTROL BOARD PIN DEFINITION ####################
 #  ______________________________________________________________
@@ -352,34 +318,34 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [beacon model default]
-#*# model_coef = 1.7584278276158511,
-#*# 	2.059659386959121,
-#*# 	0.624615833902282,
-#*# 	0.1805168495387664,
-#*# 	0.16900378624051468,
-#*# 	0.3135394469702327,
-#*# 	0.037474196091883905,
-#*# 	-0.31090547299621213,
-#*# 	0.012111261462012388,
-#*# 	0.16023089984226827
-#*# model_domain = 1.9054141955419293e-07,1.9436145783024536e-07
+#*# model_coef = 1.619908039933755,
+#*# 	  2.0068303433323584,
+#*# 	  0.8704333069689906,
+#*# 	  0.39441330472807684,
+#*# 	  -0.030561593399795473,
+#*# 	  -0.3186331982112535,
+#*# 	  0.09428971645522617,
+#*# 	  0.4813859665071756,
+#*# 	  0.04627911553669207,
+#*# 	  -0.1619210885343069
+#*# model_domain = 1.876761511538057e-07,1.9382476655726247e-07
 #*# model_range = 0.200000,5.000000
-#*# model_temp = 22.503423
+#*# model_temp = 23.010391
 #*# model_offset = 0.00000
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.002842, -0.019282, -0.040882, -0.050134, -0.040173, -0.017659, -0.002455, -0.012692, -0.015574, -0.003961
-#*# 	  -0.033207, -0.044592, -0.062432, -0.075275, -0.066565, -0.042682, -0.025770, -0.039354, -0.044384, -0.031993
-#*# 	  -0.060011, -0.070218, -0.086641, -0.096598, -0.091104, -0.066627, -0.049060, -0.059507, -0.069359, -0.062200
-#*# 	  -0.090795, -0.094984, -0.107192, -0.116410, -0.106860, -0.082359, -0.062287, -0.073299, -0.082161, -0.072433
-#*# 	  -0.099968, -0.106528, -0.116498, -0.123281, -0.112508, -0.087451, -0.066245, -0.080015, -0.089060, -0.082401
-#*# 	  -0.111169, -0.109980, -0.119728, -0.122925, -0.109802, -0.087636, -0.066367, -0.076015, -0.089559, -0.084458
-#*# 	  -0.110935, -0.111660, -0.116656, -0.119529, -0.106779, -0.080402, -0.061100, -0.071776, -0.083696, -0.079913
-#*# 	  -0.118947, -0.110082, -0.111553, -0.111671, -0.098457, -0.073762, -0.052487, -0.064300, -0.076382, -0.068475
-#*# 	  -0.097367, -0.091318, -0.089929, -0.091784, -0.078443, -0.052228, -0.031347, -0.042714, -0.052898, -0.045767
-#*# 	  -0.084889, -0.076245, -0.071685, -0.071712, -0.058159, -0.031520, -0.007943, -0.017730, -0.026703, -0.020454
+#*# 	  0.077869, 0.069895, 0.053325, 0.045670, 0.048157, 0.071199, 0.089758, 0.079123, 0.069747, 0.075403
+#*# 	  0.052312, 0.047374, 0.034297, 0.022017, 0.024388, 0.051351, 0.063076, 0.050952, 0.037004, 0.045656
+#*# 	  0.028167, 0.024527, 0.013197, 0.001711, 0.000019, 0.023221, 0.041231, 0.023731, 0.007277, 0.009330
+#*# 	  0.001139, 0.002132, -0.006328, -0.018529, -0.014559, 0.007135, 0.025944, 0.009414, -0.009825, -0.004323
+#*# 	  -0.004038, -0.005644, -0.012763, -0.025406, -0.020589, -0.003573, 0.020133, -0.000120, -0.021559, -0.021578
+#*# 	  -0.011154, -0.005036, -0.013931, -0.021270, -0.014479, 0.000160, 0.019596, -0.000624, -0.024290, -0.025233
+#*# 	  -0.006242, -0.005384, -0.006287, -0.017759, -0.012748, 0.007658, 0.025049, 0.004034, -0.022043, -0.027109
+#*# 	  -0.010482, -0.001631, -0.000918, -0.008335, -0.005329, 0.013201, 0.030300, 0.009239, -0.017793, -0.016889
+#*# 	  0.015386, 0.017248, 0.020002, 0.008364, 0.012316, 0.030748, 0.046231, 0.025360, -0.000042, -0.005949
+#*# 	  0.030878, 0.034685, 0.040193, 0.029037, 0.030908, 0.050602, 0.068135, 0.046940, 0.021257, 0.015606
 #*# x_count = 10
 #*# y_count = 10
 #*# mesh_x_pps = 2
